--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -237,6 +237,7 @@
     "hideCalls": "Hide calls",
     "showUnitsOnly": "Show units only",
     "showAllPlayers": "show all players",
+    "totalCost": "Total Cost",
     "warrantCreatedButApprovalRequired": "Successfully created the warrant, however this CAD requires approval for warrants to be active. The warrant will be available once it has been approved.",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
