--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -155,6 +155,7 @@
     "vinNumberInUse": "VIN Number is already in use.",
     "alreadyHasPrimaryUnit": "This call already has a primary unit.",
     "noActiveOfficer": "You don't have any active officer at this moment, please get back on-duty first.",
-    "socialSecurityNumberTaken": "This social security number is already in use."
+    "socialSecurityNumberTaken": "This social security number is already in use.",
+    "citizenNotAllowedToEditLicenses": "You as a citizen are not allowed to edit your own licenses. Please contact an officer to manage your licenses."
   }
 }
