--- a/apps/client/locales/en/calls.json
+++ b/apps/client/locales/en/calls.json
@@ -60,5 +60,11 @@
     "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
     "alert_endTowCall": "Are you sure you want to end this call?"
+  },
+  "Events": {
+    "unitAssignedToCall": "<span>{unit}</span> has been assigned to this call.",
+    "unitUnassignedToCall": "<span>{unit}</span> has been unassigned from this call.",
+    "unitsAssignedToCall": "<span>{unit}</span> have been assigned to this call.",
+    "unitsUnassignedToCall": "<span>{unit}</span> have been unassigned from this call."
   }
 }
